--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/vjwilson/front-end-testing-examples#readme",
   "dependencies": {
+    "jasmine": "^3.2.0",
+    "jasmine-spec-reporter": "^4.2.1",
     "jest": "^23.6.0"
   }
 }
